# chicken-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: a8svw66iyyaa87321gdya5jk4dj52i6k-source  hq4zs6vizskzlgjgf0sq0j0qap7ps4pv-source  nj99k9sv8ckgjhpnga4hnx3hnwgcnr35-source
src/: main.rs
src/commands/: ticket.rs
src/handlers/: ticket.rs  tickets.rs
