[package]
name = "chicken-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
rev = "0fc5d548e32fc7e3c8ea490afe95db00ec17ec24"
