[package]
name = "chicken-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
thiserror = "1.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "signal", "macros"]

[dependencies.serenity]
version = "0.10"
features = ["unstable_discord_api"]

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"] 

